# simple-crud

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: bae2ff8e9e37_added_user_task_relationship.py
src/: main.py
src/auth/: auth.py
src/database/: database.py
src/models/: models.py
src/schema/: schemas.py
src/simple_crud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tasks/: tasks.py
src/tests/: test_tasks.py
