[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-crud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.13",
    "bcrypt==3.2.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.33.0"
]

[tool.setuptools.packages.find]
where = ["src"]
